--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,21 @@
       "problemMatcher": [],
     },
     {
+      "label": "[64bit-bigendian]  Cargo Watch Test (Auto Test on Save)",
+      "type": "shell",
+      "command": "cargo watch -w src/ -- cross test --target powerpc64-unknown-linux-gnu",
+      "group": "test",
+      "presentation": {
+        "reveal": "always"
+      },
+      "problemMatcher": [],
+      "options": {
+        "env": {
+          "RUST_BACKTRACE": "1"
+        }
+      }
+    },
+    {
       "label": "Reloaded: Cargo Watch Tarpaulin (Auto Coverage on Save)",
       "type": "shell",
       "command": "cargo watch -x \"tarpaulin --skip-clean --out Xml --out Html --engine llvm --target-dir target/coverage-build\" -w src/",
