--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,10 +45,17 @@ jobs:
       # Note to reader. If adding this to a new repo, please clear cache.
       - name: Run cargo-semver-checks
         if: github.event_name == 'pull_request' || startsWith(github.ref, 'refs/tags/')
+        shell: bash
         run: |
-          rustup target add ${{ matrix.target }}
-          cargo install cargo-semver-checks
-          cargo semver-checks --target ${{ matrix.target }} 
+          SEARCH_RESULT=$(cargo search "^endian-writer$" --limit 1)
+
+          if echo "$SEARCH_RESULT" | grep -q "^endian-writer "; then
+            rustup target add ${{ matrix.target }}
+            cargo install cargo-semver-checks
+            cargo semver-checks --target ${{ matrix.target }} 
+          else
+              echo "No previous version found on crates.io. Skipping semver checks."
+          fi
 
   publish-crate:
     permissions:
