--- a/.github/workflows/auto-changelog.yml
+++ b/.github/workflows/auto-changelog.yml
@@ -26,5 +26,8 @@ jobs:
           commit-limit: 50
           upload-artifact: true
           upload-release: true
+          template: keepachangelog
+          override-starting-version: true
+          hide-credit: true
           is-release: ${{ startsWith(github.ref, 'refs/tags/') }}
           release-tag: ${{ github.ref_name }}
